<resources>
    <string name="app_name">Bakery Paradise</string>
    <string name="bakery_paradise">Bakery Paradise</string>
    <string name="the_aroma_of_coffee_and_the_homemade_bakery_goods_will_make_you_feel_at_home">The aroma of coffee and the homemade bakery goods will make you feel at home</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_continue">Sign up to continue</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="include_special_characters">Include special characters</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in_to_continue">Log in to continue</string>
</resources>