<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".CreateAccount">

    <ImageButton
        android:id="@+id/backCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="#ffffff"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/BakeryParadise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cedarvillecursive_regular"
        android:text="@string/bakery_paradise"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="0.08"
        android:text="@string/create_account"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BakeryParadise"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/SignUpCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/sign_up_to_continue"
        android:textColor="#A7000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CreateAccount"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/emailCreateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/email"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpCreate" />

    <EditText
        android:id="@+id/emailCreate"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailCreateText"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/phoneCreateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/phone_number"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailCreate" />

    <EditText
        android:id="@+id/phoneCreate"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneCreateText"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/passwordCreateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneCreate" />

    <EditText
        android:id="@+id/passwordCreate"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/edit_text"
        android:drawableEnd="@drawable/ic_visibility_off"
        android:ems="10"
        android:fontFamily="@font/inter_medium"
        android:inputType="textPassword|numberPassword"
        android:paddingStart="20dp"
        android:paddingEnd="15dp"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordCreateText"
        tools:ignore="Autofill,LabelFor" />

    <TextView
        android:id="@+id/charactersCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/at_least_8_characters"
        android:textColor="#8C000000"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/bullet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordCreate" />

    <TextView
        android:id="@+id/specialCharactersCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/include_special_characters"
        android:textColor="#8C000000"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/bullet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charactersCreate" />

    <TextView
        android:id="@+id/TermsofServices"
        android:layout_width="363dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/inter_regular"
        android:text="By continuing, you agree to our Terms of Services and Privacy Policy."
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialCharactersCreate"
        android:letterSpacing="0.01" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="363dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corner_ffc529"
        android:fontFamily="@font/inter_medium"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TermsofServices"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/memberLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="Already a member? Log In"
        android:textColor="#000000"
        android:fontFamily="@font/inter_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>